<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_login_parent_linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_screen_padding"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.auth.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_login_sign_in_tv"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"
        android:textSize="@dimen/text_size_titles"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_login_email_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/icon_login_activity_email"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_input"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/icon_login_activity_password"
        app:endIconMode="password_toggle"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_input"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_login_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_login_btn"
        android:textSize="@dimen/text_size_button"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_paragraph"
            android:text="@string/activity_login_no_account_tv"
            />

        <Button
            android:id="@+id/activity_login_sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_sign_up_btn"
            android:textSize="@dimen/text_size_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

    </LinearLayout>
    
    



</LinearLayout>