<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/app_padding_medium">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_edit_exercise_sets_tila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginBottom="@dimen/app_margin_small"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_edit_exercise_sets_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_exercise_sets"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_edit_exercise_reps_tila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginBottom="@dimen/app_margin_small"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_edit_exercise_reps_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_exercise_reps"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_edit_exercise_weight_tila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginBottom="@dimen/app_margin_small"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_edit_exercise_weight_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_exercise_weight"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_edit_exercise_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/button_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <Button
            android:id="@+id/dialog_edit_exercise_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>