<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_screen_padding"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.auth.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/activity_register_register_tv"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"
        android:textSize="@dimen/text_size_titles"
        android:textStyle="bold"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:layout_weight="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/activity_register_first_name_et"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginBottom="@dimen/login_form_fields_margin_between"
                    android:layout_marginEnd="@dimen/login_form_fields_margin_between"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_register_first_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_input"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/activity_register_last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginBottom="@dimen/login_form_fields_margin_between"
                    android:layout_marginStart="@dimen/login_form_fields_margin_between"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_register_last_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_input"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_email_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/login_form_fields_margin_between"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_register_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_input"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/login_form_fields_margin_between"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_register_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_input"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="@dimen/login_form_fields_margin_between"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_register_confirm_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_input"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/login_form_fields_margin_between"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/activity_register_height_et"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_register_height_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_input"
                        android:inputType="number"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/activity_register_height_tbg"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/login_form_fields_margin_between"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:checkedButton="@id/activity_register_cm_btn"
                    >
                    <Button
                        android:id="@+id/activity_register_cm_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_cm"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size_button_small"
                        style="@style/Widget.App.Button.ToggleGroup.LeftButton"
                        />

                    <Button
                        android:id="@+id/activity_register_feet_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_feet"
                        android:textSize="@dimen/text_size_button_small"
                        android:textAllCaps="false"
                        style="@style/Widget.App.Button.ToggleGroup.RightButton"
                        />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/login_form_fields_margin_between">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/activity_register_weight_et"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_register_weight_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_input"
                        android:inputType="numberDecimal"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/activity_register_weight_tbg"
                    android:layout_marginStart="@dimen/login_form_fields_margin_between"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:checkedButton="@id/activity_register_kg_btn"
                    >
                    <Button
                        android:id="@+id/activity_register_kg_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_kg"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size_button_small"
                        style="@style/Widget.App.Button.ToggleGroup.LeftButton"
                        />

                    <Button
                        android:id="@+id/activity_register_lbs_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_lbs"
                        android:textSize="@dimen/text_size_button_small"
                        android:textAllCaps="false"
                        style="@style/Widget.App.Button.ToggleGroup.RightButton"
                        />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/activity_register_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/activity_register_sign_up"
        android:layout_marginTop="@dimen/login_form_fields_margin_between"
        />

</LinearLayout>